package edu.hitsz.factory.enemy;

import edu.hitsz.aircraft.enemies.EliteProEnemy;
import edu.hitsz.application.ImageManager;
import edu.hitsz.application.Main;
import edu.hitsz.basic.AbstractFlyingObject;

public class EliteProEnemyFactory extends EnemyCreator{
    @Override
    public AbstractFlyingObject create() {
        return new EliteProEnemy(
                (int) (Math.random() * (Main.WINDOW_WIDTH - ImageManager.ELITE_PRO_ENEMY_IMAGE.getWidth())),
                (int) (Math.random() * Main.WINDOW_HEIGHT * 0.05),
                4,
                8,
                30
        );
    }

}
