package edu.hitsz.factory.enemy;

import edu.hitsz.basic.AbstractFlyingObject;

public class EnemyCreator implements EnemyFactory{
    @Override
    public AbstractFlyingObject create() {
        return null;
    }
}
